Trying to fix that it isnt working.

--- a/.env
+++ b/.env
@@ -14,7 +14,16 @@ PORT=3001
 
 
 # Host der React-App
-HOST=http://ubuntu.mshome.net:5173
+HOST=http://ubuntu.mshome.net:5173,http://user-profile-app.mshome.net
+
+# Datenbank-Konfiguration
+# DB_HOST=localhost
+# DB_USER=mariadb
+# DB_PASSWORD=testtest
+# DB_NAME=user_app
+ 
+# Server-Konfiguration
+# PORT=3001
 
 # Sessions Secrect
 # SESSION_SECRET=IhrGeheimesSessionSecret123!
