--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,13 @@
-# Datenbank-Konfiguration
-DB_HOST=localhost
-DB_USER=mariadb
-DB_PASSWORD=testtest
-DB_NAME=user_app
+import mariadb from 'mariadb';
+import 'dotenv/config';
+
+const pool = mariadb.createPool({
+  host: process.env.DB_HOST,
+  port: process.env.DB_PORT,
+  user: process.env.DB_USER,
+  password: process.env.DB_PASSWORD,
+  database: process.env.DB_DATABASE,
+  connectionLimit: 5,
+});
  
-# Server-Konfiguration
-PORT=3001
-
-# Sessions Secrect
-SESSION_SECRET=IhrGeheimesSessionSecret123!
-
-
-JWT_SECRET=meinJWTPasswort
+export default pool;
